kodekloud/lightningLabs/lightningLab2/my-busybox-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: my-busybox
  name: my-busybox
  namespace: dev2406
spec:
  nodeName: controlplane
  volumes:
  - name: secret-volume
    secret:
      secretName: dotfile-secret
      optional: false
  containers:
  - image: busybox
    name: secret
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
    volumeMounts:
    - mountPath: /etc/secret-volume
      name: secret-volume
      readOnly: true
